--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,5 +8,15 @@ MONGODB_URI=mongodb://localhost:27017/fundraise-hackathon
 # Nylas Configuration
 NYLAS_API_KEY=your_nylas_api_key_here
 NYLAS_API_URI=https://api.us.nylas.com
-NYLAS_WEBHOOK_SECRET=your_webhook_secret_here
+NYLAS_WEBHOOK_SECRET=
+
+# Webhook Configuration (for automatic webhook registration)
+# Set this to your public webhook endpoint URL (must be HTTPS)
+# For VS Code port forwarding: https://your-forwarded-url.devtunnels.ms
+# For ngrok: https://your-subdomain.ngrok.io
+# For production: https://your-domain.com
+WEBHOOK_BASE_URL=https://your-forwarded-url.devtunnels.ms
+
+SKIP_WEBHOOK_VERIFICATION=true
+
 
