initial arsh changes

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,3 @@
-# Server Configuration
-PORT=4000
-NODE_ENV=development
-# MongoDB Configuration
-MONGODB_URI=# Server Configuration
 PORT=4000
 NODE_ENV=development
 # MongoDB Configuration
@@ -12,6 +7,6 @@ NYLAS_API_KEY=nyk_v0_XPSgN7mwhVYEjxOZWn9ulSkM1Ba2nSCfCPiVhQUiApn1pgyVWH1sXXUdE7x
 NYLAS_API_URI=https://api.us.nylas.com
 NYLAS_WEBHOOK_SECRET=
 # Webhook Auto-Registration
-WEBHOOK_BASE_URL=https://8n60nc3s-4000.usw2.devtunnels.ms
+WEBHOOK_BASE_URL=https://258c4kbx-4000.usw2.devtunnels.ms
 # Development Settings (Mandatory)
 SKIP_WEBHOOK_VERIFICATION=false
