--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,9 @@ NYLAS_API_KEY=your_nylas_api_key_here
 NYLAS_API_URI=https://api.us.nylas.com
 NYLAS_WEBHOOK_SECRET=
 
+# OpenAI Configuration (for AI-powered summary and action items)
+OPENAI_API_KEY=your_openai_api_key_here
+
 # Webhook Configuration (for automatic webhook registration)
 # Set this to your public webhook endpoint URL (must be HTTPS)
 # For VS Code port forwarding: https://your-forwarded-url.devtunnels.ms
