--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,3 +1,7 @@
+# Frontend Environment Variables
+
 # Backend API URL
+# For local development, use http://localhost:4000
+# For production, use your deployed backend URL
 NEXT_PUBLIC_API_URL=http://localhost:4000
 
